fixing spacing issues

--- a/src/styles/_blog.scss
+++ b/src/styles/_blog.scss
@@ -1,14 +1,5 @@
 .ccp-blog__container {
-  max-width: 970px;
-  h1 {
-    text-align: center;
-    // font-size: 40px;
-    font-size: 4rem;
-    @include for-tablet-landscape-up {
-      // font-size: 82px;
-      font-size: 8.2rem;
-    }
-  }
+  max-width: 97rem;
   .ccp-blog__content {
     // general paragraphs
       p {
@@ -65,6 +56,33 @@
           line-height: 3rem;
         }
       }
+    }
+  }
+  h1 {
+    font-size: 4rem;
+    @include for-tablet-landscape-up {
+      font-size: 8.2rem;
+    }
+  }
+  h2 {
+    font-size: 3.5rem;
+    @include for-tablet-landscape-up {
+      font-size: 7.7rem;
+    }
+  }
+  h3 {
+    font-size: 3rem;
+    @include for-tablet-landscape-up {
+      font-size: 7.2rem;
+    }
+  }
+  p,
+  span,
+  li,
+  strong {
+    font-size: 1.6rem;
+    @include for-tablet-landscape-up {
+      font-size: 2rem;
     }
   }
 }
